Fix French language switcher

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -104,6 +104,7 @@
 			"de": "Deutsch",
 			"en": "English",
 			"es": "Español",
+			"fr": "Français",
 			"nl": "Nederlands",
 			"ru": "Русский"
 		},
